# catalan_common_voice_filter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: config.yml  tests.yml
catalan_common_voice_filter/: constants.py  filtre_frases.py
src/: filtre_frases.py  filtre_frases3.py
src/catalan_common_voice_filter/: filter_phrases.py  filtre_frases.py
src/catalan_common_voice_filter/data/: cognoms_list.txt
test/integration/: test_filtre_frases.py
test/unit/: test_filtre_frases.py
tests/data/: frases_prova.txt  paraules_per_filtrar_literatura.txt  pujolar_twain.txt
tests/integration/: test_filter_phrases.py  test_filtre_frases.py
tests/unit/: test_filter_phrases.py  test_filtre_frases.py
