[metadata]
name = catalan_common_voice_filter
description = Catalan Common Voice Filter
author = Carme Armentano & Hannah Galbraith
license = Apache
license_file = LICENSE
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10


[options]
packages =
    catalan_common_voice_filter
install_requires =
    sentence-splitter>=1.4
    hunspell>=0.5
    unidecode>=1.3
    lingua-franca>=0.4
    spacy>=3.7
    lingua-franca>=0.4
python_requires = >=3.10
package_dir =
    =src
zip_safe = no


[options.extras_require]
testing =
    pre-commit>=3.6.2
    pytest>=8.1
    pytest-cov>=5.0
    mypy>=1.9
    flake8>=7.0

[options.package_data]
catalan_common_voice_filter = py.typed


[flake8]
max-line-length = 160
ignore = E203, W503
